samples/_failures_safe/1761420778_326ea5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b9c15348.c: In function ‘main’:
./samples/SAFE/__tmp_b9c15348.c:157:16: error: missing terminating " character
  157 |         printf("Matrices cannot be multiplied (dimension mismatch)\n
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b9c15348.c:157:9: error: expected expression at end of input
  157 |         printf("Matrices cannot be multiplied (dimension mismatch)\n
      |         ^~~~~~
./samples/SAFE/__tmp_b9c15348.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b9c15348.c:157:9: error: expected declaration or statement at end of input
